test/compiler/fail/_illegal_char.ods
do x = 42
do illegal = ~
